# ros2_yolo

./: .gitignore  Dockerfile  package.xml  setup.py
ros2_yolo/: predict.py
