<?xml version="1.0"?>
<package format="3">
  <name>ros2_yolo</name>
  <version>0.0.0</version>
  <description>The ros2_yolo package</description>
  <maintainer email="amsl@todo.todo">user</maintainer>
  <license>todo</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>YOLO</depend>
  <depend>PIL</depend>
  <depend>cv2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
